demo/mongo-demo/13-mongodb.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  labels:
    app: mongodb
  namespace: mongo-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
      namespace: mongo-demo
    spec:
      containers:
      - name: mongodb
        image: mongo
        ports:
        - containerPort: 27071
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
