demo/mongo-demo/23-mongoexpress.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongoexpress-deployment
  namespace: mongo-demo
spec:
  selector:
    matchLabels:
      app: mongoexpress
  template:
    metadata:
      labels:
        app: mongoexpress
      namespace: mongo-demo
    spec:
      containers:
        - name: mongoexpress
          image: mongo-express
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8081
