demo/mongo-demo/15-mongodb.service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: mongo-demo
  name: mongodb-service
spec:
  selector:
    app: mongodb
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
