demo/mongo-demo/25-mongoexpress.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongoexpress-service
  namespace: mongo-demo
spec:
  selector:
    app: mongoexpress
  ports:
  - port: 8081
    targetPort: 8081
