demo/mongo-demo/grafana.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  rules:
  - host: grafana.vato
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
